# Copperbottoms

./: README.md  ROS Instructions  Verify.py  WSL_rvis_instructions  arrow_teleop_fixed.py  centerv5.py  centerv6.py  check_preq.py  check_servo_config.py  check_steering_config.py  check_throttle_safety.py  diagnose_arming.py  diagnose_servo3.py  direct_server_test.py  disable_failsafe.py  driving_debug.py  find_block.py  find_steering_channel.py  find_throttle_neutral.py  fix_rc_overide.py  fix_servo_config.py  fix_steering_config.py  fix_steering_function.py  hail_mary.py  lidar_debug.py  lidar_debug_sates.py  lidar_look_ahead.py  mary_rover_node.py  maryteleop.py  monitor_servo_output.py  pixhawk_bridge_node.py  reverse_3way.py  reverse_3way_pgw.py  reverse_driving.py  reverse_test.py  reverse_testv2.py  reverse_testv3.py  ros2_emergency_stop.py  rover_node_fixed.py  rover_node_fixed_20  (+17 more)
amy_test/: README_LATENCY_MONITORING.md  readme  setup.py
amy_test/amy_test/: automated_latency_test.py  latency_aggregator.py  latency_dashboard.py  line_follow_amy.py  motor_latency_monitor.py  performance_logger.py  topic_rate_monitor.py  vision_latency_monitor.py
amy_test/launch/: latency_monitoring.launch.py  line_follow_amy_launch.py  tape_contour_rt.launch.py
log/: latest_list
ros_ws/: arrow_key_teleop_last_worked.py  arrow_teleop_fixed.py  bag_record_script  frames_2026-04-29_11.53.52.gv  how_to_make_rosbag  joystick.yaml  joystick_launch.yaml  mav.parm  mav.tlog  mav.tlog.raw  rover_code_20hz.py  rover_node_fixed.py  rover_node_manual.py  run_node_slow.py  sixpair
ros_ws/install/: local_setup.sh  setup.sh
ros_ws/install/amy_test/share/amy_test/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros_ws/install/amy_test/share/amy_test/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  amy_testConfig-version.cmake  amy_testConfig.cmake  amy_test__rosidl_typesupport_cppExport.cmake  amy_test__rosidl_typesupport_introspection_cExport-noconfig.cmake  amy_test__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_amy_test__rosidl_generator_cExport-noconfig.cmake  export_amy_test__rosidl_generator_cExport.cmake  export_amy_test__rosidl_generator_cppExport.cmake  export_amy_test__rosidl_generator_pyExport.cmake  export_amy_test__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros_ws/install/amy_test/share/amy_test/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
ros_ws/install/amy_test/share/amy_test/launch/: odometry_launch.py  tape_contour_rt.launch.py  tape_pipeline.launch.py  test_full_launch.py
ros_ws/install/amy_test/share/amy_test/msg/: TapeContour.idl  TapeContour.msg
ros_ws/log/: latest_build  latest_list
ros_ws/rosbag2_2026_04_28-12_33_23/: metadata.yaml
ros_ws/src/: README.md  arrow_teleop_fixed.py  find_paper.py  find_paper_hlock.py  find_tape.py  find_tape_launch.py  motion_planner.py  nav2_config.yaml  paper_following_launchv2.py  paper_following_stack.launch.py  pid_paper_following.py  pid_tape_following.py  reverse_test.py  save_img.py  tmpForM  (+15 more)
ros_ws/src/amy_test/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros_ws/src/amy_test/amy_test/: notes _on_new full launch   notes_on_new_full_launch  tape_control_node.py  tape_recovery_node.py  tape_vision_node.py  test_full_launch.py
ros_ws/src/amy_test/amy_test.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
ros_ws/src/amy_test/amy_test/Slam_landmark/: __init__.py
ros_ws/src/amy_test/amy_test/Slam_landmark/odometery/: LIO.py  __init__.py
ros_ws/src/amy_test/amy_test/msg/: TapeContour.msg
ros_ws/src/amy_test/amy_test/verification/: REFAC_PLAN.md  readme  tape_contour_rt.oldpy  tape_contour_rt.py
ros_ws/src/amy_test/launch/: tape_pipeline.launch.py  test_full_launch.py
ros_ws/src/visualization/sensor_visualization/: package.xml  setup.py
(+506 files in other folders)
